Fix: Code title spacing from top

--- a/styles/content-spacing.css
+++ b/styles/content-spacing.css
@@ -183,3 +183,7 @@ article ol+p>img {
 .menu-title {
     margin-bottom: 12px !important;
 }
+
+.remark-code-title {
+    margin-top: 16px;
+}
